--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -12,11 +12,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 {% endblock %}
 {% block body %}
-	<!-- <div id="todo-list"></div>
-	<button class="btn logout" onclick="logOut()">x</button>
-	<button class="btn add-task" onclick="addTask()">+</button> -->
 	<div class="main-container">
-		<nav class="navbar">
+		<!-- <nav class="navbar">
 			<div class="logo-container">
 				<div>ToDO</div>
 			</div>
@@ -25,11 +22,11 @@
 					<i class="nav-icon fa fa-tasks"></i>
 				</div>
 			</div>
-		</nav>
+		</nav> -->
 		<div class="todo-main-container">
 			<div class="login-detail-container">
-				<div class="greet-user">
-					Hey there, Harsh Mishra
+				<div id="greet-user">
+					Hey there, 
 				</div>
 				<div class="logout">
 					<button onclick="logOut()">Logout</button>
@@ -37,181 +34,25 @@
 				</div>
 			</div>
 			<div class="task-div-container">
-				<div class="container-todo">
-					<div class="heading">ToDo</div>
+				<div class="container-scheduled">
+					<div class="heading">Scheduled</div>
 					<hr>
 					<div class="add-task-btn-container">
 						<div class="add-task-btn">
 							<i class="fa fa-plus-circle"></i>
 						</div>
 					</div>
-					<div class="task-list">
-						<div class="task">
-							<div class="task-check">
-								<input type="checkbox" name="task">
-							</div>
-							<div class="task-desc">
-								Lorem ipsum dolor sit amet, consectetur adipiscing
-								elit, sed do eiusmod tempor incididunt ut labore et
-								dolore magna aliqua. Ut enim ad minim veniam, quis
-								nostrud exercitation ullamco laboris nisi ut aliquip ex
-								ea commodo consequat.
-							</div>
-						</div>
-						<div class="task">
-							<div class="task-check">
-								<input type="checkbox" name="task">
-							</div>
-							<div class="task-desc">
-								Lorem ipsum dolor sit amet, consectetur adipiscing
-								elit, sed do eiusmod tempor incididunt ut labore et
-								dolore magna aliqua. Ut enim ad minim veniam, quis
-								nostrud exercitation ullamco laboris nisi ut aliquip ex
-								ea commodo consequat.
-							</div>
-						</div>
-						<div class="task">
-							<div class="task-check">
-								<input type="checkbox" name="task">
-							</div>
-							<div class="task-desc">
-								Lorem ipsum dolor sit amet, consectetur adipiscing
-								elit, sed do eiusmod tempor incididunt ut labore et
-								dolore magna aliqua. Ut enim ad minim veniam, quis
-								nostrud exercitation ullamco laboris nisi ut aliquip ex
-								ea commodo consequat.
-							</div>
-						</div>
-					</div>
+					<div class="task-list"></div>
 				</div>
-				<div class="container-pending">
-					<div class="heading">Pending</div>
+				<div class="container-overdue">
+					<div class="heading">Overdue</div>
 					<hr>
-					<div class="task-list">
-						<div class="pc-task-container">
-							<div class="date"><span class="date-line"></span>30-09-2021, Monday<span class="date-line"></span></div>
-							<div class="task">
-								<div class="task-check">
-									<input type="checkbox" name="task">
-								</div>
-								<div class="task-desc">
-									Lorem ipsum dolor sit amet, consectetur adipiscing
-									elit, sed do eiusmod tempor incididunt ut labore et
-									dolore magna aliqua. Ut enim ad minim veniam, quis
-									nostrud exercitation ullamco laboris nisi ut aliquip ex
-									ea commodo consequat.
-								</div>
-							</div>
-							<div class="task">
-								<div class="task-check">
-									<input type="checkbox" name="task">
-								</div>
-								<div class="task-desc">
-									Lorem ipsum dolor sit amet, consectetur adipiscing
-									elit, sed do eiusmod tempor incididunt ut labore et
-									dolore magna aliqua. Ut enim ad minim veniam, quis
-									nostrud exercitation ullamco laboris nisi ut aliquip ex
-									ea commodo consequat.
-								</div>
-							</div>
-							<div class="task">
-								<div class="task-check">
-									<input type="checkbox" name="task">
-								</div>
-								<div class="task-desc">
-									Lorem ipsum dolor sit amet, consectetur adipiscing
-									elit, sed do eiusmod tempor incididunt ut labore et
-									dolore magna aliqua. Ut enim ad minim veniam, quis
-									nostrud exercitation ullamco laboris nisi ut aliquip ex
-									ea commodo consequat.
-								</div>
-							</div>
-						</div>
-						<div class="pc-task-container">
-							<div class="date"><span class="date-line"></span>30-09-2021, Monday<span class="date-line"></span></div>
-							<div class="task">
-								<div class="task-check">
-									<input type="checkbox" name="task">
-								</div>
-								<div class="task-desc">
-									Lorem ipsum dolor sit amet, consectetur adipiscing
-									elit, sed do eiusmod tempor incididunt ut labore et
-									dolore magna aliqua. Ut enim ad minim veniam, quis
-									nostrud exercitation ullamco laboris nisi ut aliquip ex
-									ea commodo consequat.
-								</div>
-							</div>
-							<div class="task">
-								<div class="task-check">
-									<input type="checkbox" name="task">
-								</div>
-								<div class="task-desc">
-									Lorem ipsum dolor sit amet, consectetur adipiscing
-									elit, sed do eiusmod tempor incididunt ut labore et
-									dolore magna aliqua. Ut enim ad minim veniam, quis
-									nostrud exercitation ullamco laboris nisi ut aliquip ex
-									ea commodo consequat.
-								</div>
-							</div>
-							<div class="task">
-								<div class="task-check">
-									<input type="checkbox" name="task">
-								</div>
-								<div class="task-desc">
-									Lorem ipsum dolor sit amet, consectetur adipiscing
-									elit, sed do eiusmod tempor incididunt ut labore et
-									dolore magna aliqua. Ut enim ad minim veniam, quis
-									nostrud exercitation ullamco laboris nisi ut aliquip ex
-									ea commodo consequat.
-								</div>
-							</div>
-						</div>
-					</div>
+					<div class="task-list"></div>
 				</div>
 				<div class="container-completed">
 					<div class="heading">Completed</div>
 					<hr>
-					<div class="task-list">
-						<div class="pc-task-container">
-							<div class="date"><span class="date-line"></span>30-09-2021, Monday<span class="date-line"></span></div>
-							<div class="task">
-								<div class="task-check">
-									<input type="checkbox" name="task" checked>
-								</div>
-								<div class="task-desc">
-									Lorem ipsum dolor sit amet, consectetur adipiscing
-									elit, sed do eiusmod tempor incididunt ut labore et
-									dolore magna aliqua. Ut enim ad minim veniam, quis
-									nostrud exercitation ullamco laboris nisi ut aliquip ex
-									ea commodo consequat.
-								</div>
-							</div>
-							<div class="task">
-								<div class="task-check">
-									<input type="checkbox" name="task" checked>
-								</div>
-								<div class="task-desc">
-									Lorem ipsum dolor sit amet, consectetur adipiscing
-									elit, sed do eiusmod tempor incididunt ut labore et
-									dolore magna aliqua. Ut enim ad minim veniam, quis
-									nostrud exercitation ullamco laboris nisi ut aliquip ex
-									ea commodo consequat.
-								</div>
-							</div>
-							<div class="task">
-								<div class="task-check">
-									<input type="checkbox" name="task" checked>
-								</div>
-								<div class="task-desc">
-									Lorem ipsum dolor sit amet, consectetur adipiscing
-									elit, sed do eiusmod tempor incididunt ut labore et
-									dolore magna aliqua. Ut enim ad minim veniam, quis
-									nostrud exercitation ullamco laboris nisi ut aliquip ex
-									ea commodo consequat.
-								</div>
-							</div>
-						</div>
-					</div>
+					<div class="task-list"></div>
 				</div>
 			</div>
 		</div>
