--- a/website/static/CSS/style.css
+++ b/website/static/CSS/style.css
@@ -2,6 +2,7 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+	font-weight: bolder;
 }
 
 .main-container {
@@ -65,7 +66,7 @@ nav {
 	position: relative;
 }
 
-.greet-user {
+#greet-user {
 	font-weight: bold;
 }
 
@@ -98,7 +99,7 @@ nav {
 	padding: 15px 20px;
 }
 
-.container-todo, .container-pending, .container-completed {
+.container-scheduled, .container-overdue, .container-completed {
 	flex-basis: 32%;
 	height: 100%;
 	background-color: #F0EDF4;
