--- a/website/static/CSS/style.css
+++ b/website/static/CSS/style.css
@@ -99,7 +99,7 @@ nav {
 	padding: 15px 20px;
 }
 
-.container-scheduled, .container-overdue, .container-completed {
+.container-upcoming, .container-overdue, .container-completed {
 	flex-basis: 32%;
 	height: 100%;
 	background-color: #F0EDF4;
