--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -43,7 +43,7 @@
 						</div>
 					</div>
 					<div class="task-list">
-						<div class="no-date"></div>
+						<div class="no-date d00-00-0000"></div>
 					</div>
 				</div>
 				<div class="container-overdue">
@@ -55,7 +55,7 @@
 					<div class="heading">Completed</div>
 					<hr>
 					<div class="task-list">
-						<div class="no-date"></div>
+						<div class="no-date d00-00-0000"></div>
 					</div>
 				</div>
 			</div>
