--- a/website/static/CSS/style.css
+++ b/website/static/CSS/style.css
@@ -1,10 +1,3 @@
-* {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-	font-weight: bolder;
-}
-
 .main-container {
 	display: flex;
 	height: 100vh;
@@ -23,7 +16,7 @@ nav {
 
 .logo-container {
 	padding: 10px 0;
-	font-size: 24px;
+	font-size: 2rem;
 	font-family: 'Poppins', sans-serif;
 }
 
@@ -108,7 +101,7 @@ nav {
 
 .heading {
 	padding: 10px 14px;
-	font-size: 14px;
+	font-size: 1rem;
 	font-family: 'Poppins', sans-serif;
 	font-weight: bold;
 }
@@ -160,7 +153,7 @@ hr {
 }
 
 .task-desc {
-	font-size: 12px;
+	font-size: 1rem;
 	font-family: 'Poppins', sans-serif;
 	word-wrap: break-word;
 	padding: 4px 10px;
@@ -191,7 +184,7 @@ hr {
 }
 
 .date {
-	font-size: 10px;
+	font-size: 0.8rem;
 	font-family: 'Poppins', sans-serif;
 	text-align: center;
 	padding: 10px 0px;
