--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -34,36 +34,12 @@
 					</div>
 					<span>Already have an Account? <a href="./">Login</a></span>
 					<br>
-					<button id="signinBtn" type="button">Sign Up</button>
+					<button id="signupBtn" type="button">Sign Up</button>
+					<div id="message"></div>
 				</form>
 			</div>
 		</div>
 	</div>
-	<!-- <form id="signup">
-		<fieldset style="width: 25%;">
-			<label for="fName">First Name:</label>
-			<br>			
-			<input type="text" id="fName" placeholder="First Name" required>
-			<br>			
-			<label for="lName">Last Name:</label>
-			<br>			
-			<input type="text" id="lName" placeholder="Last Name" required>
-			<br>			
-			<label for="email">Email:</label>
-			<br>			
-			<input type="text" id="email" placeholder="ex@example.com" required>
-			<br>			
-			<label for="pwd">Password:</label>
-			<br>			
-			<input type="password" id="pwd" placeholder="Enter Password" required>
-			<br>			
-			<label for="pwd2">Confirm Password:</label>
-			<br>			
-			<input type="password" id="pwd2" placeholder="Confirm Password" required>
-			<br>			
-			<button id="signupBtn" type="button">Register</button>
-		</fieldset>
-	</form> -->
 
 	<script>
 		document.getElementById('signupBtn').onclick = async () => {
