--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -3,7 +3,7 @@
 {% block head %}
 	<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>	
 	<script>
-		if (localStorage.getItem('email')) { window.location.href = '/home' }
+		if (localStorage.getItem('token')) { window.location.href = '/home' }
 	</script>
 {% endblock %}
 {% block body %}
