--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -24,10 +24,9 @@
 						<input type="password" id="pwd" placeholder="Password" required minlength="8">
 					</div>
 					<span>Don't have an Account? <a href="./signup">Signup</a></span>
-					<br>
-					<button id="loginBtn" type="button" disabled>Login</button>
+					<span id="message"></span>
+					<button id="loginBtn" type="button">Login</button>
 				</form>
-				<span id="message"></span>
 			</div>
 		</div>
 	</div>
