--- a/website/static/CSS/base.css
+++ b/website/static/CSS/base.css
@@ -83,9 +83,13 @@ input::placeholder {
 }
 
 form > span {
-	float: right;
+	display: block;
 	font-size: 1rem;
-	margin-top: 3px;
+	margin-top: 20px;
+}
+
+#message {
+	margin-top: 20px;
 }
 
 form > button {
