--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -42,7 +42,7 @@
 							<i class="fa fa-plus-circle"></i>
 						</div>
 					</div>
-					<div class="task-list">
+					<div class="task-list diff">
 						<div class="no-date d00-00-0000"></div>
 					</div>
 				</div>
